[ACC-338] Solved issues with Bootstrap/FontAwesome - Added FA icon on Collapse Menu Button.

--- a/wresources/src/main/webapp/ariane/static/css/main.css
+++ b/wresources/src/main/webapp/ariane/static/css/main.css
@@ -86,11 +86,12 @@ body #menuDivRight .pui-menu, body #menuDivRight .ui_menu {float: right; width: 
 body #menuDivRight ul {float: right; width: 260px}
 body #menuDivRight ul .ui-menu-child {float: right; width: 180px}
 
+/*** Button Collapse Menu ***/
 #showHideMenu { 
 	width: 30px;
-	height: 20px;
+	height: 15px;
 	display: block;
-	background: rgb(51, 51, 51) url(../aimages/ariane/arrow-up.png) top center no-repeat;
+	background: rgb(51, 51, 51);
 	position: absolute; 
 	color: #ccc;
 	left: 50%; 
@@ -102,11 +103,28 @@ body #menuDivRight ul .ui-menu-child {float: right; width: 180px}
 	-o-transition: all 300ms ease;
 	transition: all 300ms ease;
 }
+#showHideMenu:before {
+	content: "\f106";
+	font-family: FontAwesome;
+	position: absolute;
+	left: 10px;
+	top: 0;
+}
 #showHideMenu.closed { 
 	top: 0;
 	z-index: 8960;
-	background: rgb(51, 51, 51) url(../aimages/ariane/arrow-down.png) top center no-repeat;
+	background: rgb(51, 51, 51);
 	border-radius: 0px 0px 3px 3px
+}
+#showHideMenu.closed:before {
+	content: "\f107";
+	font-family: FontAwesome;
+	position: absolute;
+	left: 10px;
+	top: -4px;
+}
+#showHideMenu:hover {
+	color: #e13809;
 }
 
 body #mainCenter {top: 38px !important;-webkit-transition: all 300ms ease;
